# more-python-hard-way

./: .gitignore  README.md  perf_analysis.py  pyproject.toml
exc_05_cat/: cat.py  hello.txt
exc_07_grep/: grep.py
exc_09_sed/: sed.py
exc_10/: sort.py
exc_10/sort-rev/: pyproject.toml
exc_10/sort-rev/sort_rev/: sort.py
exc_10/sort-rev/tests/: test_sort_rev.py
exc_10_sort/sort-rev/sort_rev/: sort.py
exc_11/: uniq.py
exc_11_uniq/: uniq.py
exc_12/: sllist.py
exc_12/sllist/: pyproject.toml
exc_12/sllist/sllist/: single_linked_list.py  single_linked_node.py
exc_12_single_linked_list/single_linked_list/: sl_list.py
exc_12_single_linked_list/tests/: test_sllist.py
exc_13/dllist/: pyproject.toml
exc_13_double_linked_list/: pyproject.toml
exc_13_double_linked_list/double_linked_list/: dl_list.py  dl_node.py
exc_13_double_linked_list/tests/: test_dllist.py
exc_14_stacks_queues/: pyproject.toml
exc_14_stacks_queues/tests/: test_stacksnqueues.py
exc_15/sorting/: sorting.py
exc_15_sorting_algos/sorting/: sorting.py
exc_16/: dictionary.py  dictionary_appr_1.py  test_dictionary.py
exc_16_dictionary/: dictionary.py  dictionary_appr_1.py  test_dictionary.py
exc_20_bst/: bs_tree.py  bs_tree_node.py  bst_node.py
exc_20_bst/tests/: test_tree.py
exc_21_binary_search/: binary_search.py
exc_21_binary_search/tests/: test_binary_search.py
exc_22_suffix_arrays/: suffix_array.py
exc_4/: argparse_parse.py  hello_ext.txt  parse_argssys.py
exc_5/: hello_3.txt
exc_6/: find.py
exc_8/: cut.py
shared/: utils.py
(+8 files in other folders)
