[tool.poetry]
name = "sort-rev"
version = "0.1.0"
description = ""
authors = ["kuchichan <pawel.kucharski@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.1.2"
black = "^20.8b1"
pytest-mock = "^3.3.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
